--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
       - id: pyright
         args: [--project, pyproject.toml]
-        additional_dependencies: ['networkx', 'pyyaml', 'pandas', 'pandas-stubs']
+        additional_dependencies: ['networkx', 'pyyaml', 'pandas', 'pandas-stubs', 'netgraph-core']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
